--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,10 +24,12 @@ services:
       - "1433:1433"
       - "6379:6379"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro  Mount the Nginx config
-      # - ./certs:/etc/nginx/certs:ro  Mount the directory containing the SSL certificates
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf #Mount the Nginx config
+      - ./nginx/ssl:/etc/nginx/certs #Mount the directory containing the SSL certificates
     networks:
       - my-network
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   #https://hub.docker.com/_/redis
   redis:
