--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,6 +2,53 @@ events {
     worker_connections 1024;
 }
 
+
+http {
+    server {
+        listen 80;
+        server_name app.devexlead.local;
+
+        location / {
+            proxy_pass http://host.docker.internal:52100;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            proxy_connect_timeout 60;
+            proxy_read_timeout 60;
+            proxy_send_timeout 60;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        server_name app.devexlead.local;
+
+        ssl_certificate     /etc/nginx/certs/wildcard.crt;
+        ssl_certificate_key /etc/nginx/certs/wildcard.key;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        location / {
+            proxy_pass http://host.docker.internal:52100;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            proxy_connect_timeout 60;
+            proxy_read_timeout 60;
+            proxy_send_timeout 60;
+        }
+    }
+}
+
 # Nginx needs to be configured with the stream module to handle TCP connections.
 stream {
 
@@ -34,3 +81,4 @@ stream {
     }
 
 }
+
