--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,8 +2,8 @@ events {
     worker_connections 1024;
 }
 
-
 http {
+    # HTTP Server for app.devexlead.local
     server {
         listen 80;
         server_name app.devexlead.local;
@@ -11,18 +11,18 @@ http {
         location / {
             proxy_pass http://host.docker.internal:52100;
             proxy_http_version 1.1;
-            proxy_set_header Connection "";
-            proxy_set_header Host $host;
+            proxy_set_header Host $http_host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
 
-            proxy_connect_timeout 60;
-            proxy_read_timeout 60;
-            proxy_send_timeout 60;
+            proxy_connect_timeout 60s;
+            proxy_read_timeout 60s;
+            proxy_send_timeout 60s;
         }
     }
 
+    # HTTPS Server for app.devexlead.local
     server {
         listen 443 ssl;
         server_name app.devexlead.local;
@@ -32,19 +32,68 @@ http {
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers on;
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 1h;
 
         location / {
             proxy_pass http://host.docker.internal:52100;
             proxy_http_version 1.1;
-            proxy_set_header Connection "";
-            proxy_set_header Host $host;
+            proxy_set_header Host $http_host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
 
-            proxy_connect_timeout 60;
-            proxy_read_timeout 60;
-            proxy_send_timeout 60;
+            proxy_connect_timeout 60s;
+            proxy_read_timeout 60s;
+            proxy_send_timeout 60s;
+        }
+    }
+
+    # HTTP Server for api.devexlead.local
+    server {
+        listen 80;
+        server_name api.devexlead.local;
+
+        location / {
+            proxy_pass http://host.docker.internal:52101;
+            proxy_http_version 1.1;
+            proxy_set_header Host $http_host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            proxy_connect_timeout 60s;
+            proxy_read_timeout 60s;
+            proxy_send_timeout 60s;
+        }
+    }
+
+    # HTTPS Server for api.devexlead.local
+    server {
+        listen 443 ssl;
+        server_name api.devexlead.local;
+
+        ssl_certificate     /etc/nginx/certs/wildcard.crt;
+        ssl_certificate_key /etc/nginx/certs/wildcard.key;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers on;
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 1h;
+
+        location / {
+            proxy_pass http://host.docker.internal:52101;
+            proxy_http_version 1.1;
+            proxy_set_header Host $http_host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            proxy_connect_timeout 60s;
+            proxy_read_timeout 60s;
+            proxy_send_timeout 60s;
         }
     }
 }
